Removed the edit transaction button. Fixed shadows by setting zome z-index values.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,7 @@ body {
   overflow: clip;
   position: relative;
   background-color: #fff;
+  z-index: 4;
 }
 
 .window::before {
@@ -71,6 +72,7 @@ body {
   height: 100%;
   content: "";
   pointer-events: none;
+  z-index: 3;
 }
 
 .navbar {
